<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">Todoity</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_task">Task</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About Todoity</string>

    <!-- Menu -->
    <string name="action_new_list">New List</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_change_date">Change Date</string>
    <string name="action_new_task">New Task</string>
    <string name="action_done">Done</string>
    <string name="action_save">Save</string>

    <!-- General -->
    <string name="owner">Owner: Lars Erik Strand</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="all">All</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="edit_list">Edit List</string>
    <string name="edit">Edit</string>
    <string name="edit_task">Edit task</string>
    <string name="delete">Delete</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_list">Delete List</string>
    <string name="discard">Discard</string>
    <string name="location">Location</string>
    <string name="location_hint">Enter location</string>
    <string name="pinpoint">or pinpoint location on map</string>
    <string name="task_description_hint">Task description</string>
    <string name="time">Time</string>
    <string name="fixed_time">Fixed time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="divider">-</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="finished">Finished</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="options">Options</string>
    <string name="occupation">Occupation</string>
    <string name="move">Move</string>
    <string name="move_task">Move task to date</string>
    <string name="welcome">Welcome</string>
    <string name="reorder_task">Reorder task</string>
    <string name="recommending">Recommending&#8230;</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <!-- Messages/Alerts -->
    <string name="set_location_message">You must choose a location for your task</string>
    <string name="set_time_message">This task has a fixed time. You must set the start time of the task.</string>
    <string name="delete_list_message_pre">All tasks for</string>
    <string name="delete_list_message">will be deleted</string>
    <string name="welcome_message">Welcome to Todoity. As this is your first time running this application, please select an occupation before proceeding. You can change your occupation in settings later.</string>
    <string name="about_message">Todoity is developed as a Master thesis project at Gjøvik University College. It\'s purpose is not only to keep track of your tasks but also to gather contextual information as you do the tasks in order to give you future task recommendations.</string>
    <string name="policy">Welcome to Todoity. In order to use this app you must first read and accept the following privacy policy: The application collects and stores contextual information (time, location and activity) about you when you do tasks. This information is stored on a remote server. The collected data are anonymous and is only used for a master thesis project research.</string>

    <!-- Service -->
    <string name="contextservice_notification_title">Todoity Context Service:</string>
    <string name="contextservice_notification_message">Collecting contexts</string>
    <string name="geofenceservice_single_entered1">You\'re close to task </string>
    <string name="geofenceservice_single_entered2">. Do this task now?</string>
    <string name="geofenceservice_multiple_entered">You\'re close to several tasks. Do these now?</string>

    <!-- Preferences -->
    <string name="pref_context_storage">Context Storage</string>
    <string name="pref_occupation_default">None</string>
    <string name="pref_context_storage_summ">Allow application to collect and store context information</string>
    <string name="pref_undergraduate">Undergraduate student (Bachelor)</string>
    <string name="pref_postgraduate">Postgraduate student (Master, Ph.D.)</string>

    <!-- Arrays -->


    <!-- Occupation task templates -->

    <string-array name="undergraduate_tasks_array">
        <item>Attend lecture</item>
        <item>Read</item>
        <item>Write report</item>
        <item>Do course exercises</item>
        <item>Meeting</item>
        <item>Group work</item>
        <item>Practical work</item>
        <item>Other</item>
    </string-array>
    <string-array name="postgraduate_tasks_array">
        <item>Attend lecture</item>
        <item>Read</item>
        <item>Write report</item>
        <item>Do course exercises</item>
        <item>Meeting</item>
        <item>Group work</item>
        <item>Practical work</item>
        <item>Experiment</item>
        <item>Other</item>
    </string-array>
    <string-array name="tasks_array">
        <item>Attend lecture</item>
        <item>Read</item>
        <item>Write report</item>
        <item>Do course exercises</item>
        <item>Meeting</item>
        <item>Group work</item>
        <item>Practical work</item>
        <item>Other</item>
    </string-array>

    <!-- Occupation types -->
    <string-array name="pref_occupation_values">
        <item>Undergraduate student (Bachelor)</item>
        <item>Postgraduate student (Master, Ph.D.)</item>
    </string-array>

</resources>
