<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".TaskActivity"
    android:clickable="true"
    android:focusable="true"
	android:focusableInTouchMode="true" >
        
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
    	<TextView
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:text="@string/task"
        	style="?android:listSeparatorTextViewStyle" />
    
    	<Spinner android:id="@+id/category_spinner"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp" />
    
    	<EditText android:id="@+id/description_edit"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/task_description_hint"
        	android:inputType="textCapSentences" />
    	    
        <TextView
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="30dp"
        	android:text="@string/location"
        	style="?android:listSeparatorTextViewStyle" />

    	<AutoCompleteTextView android:id="@+id/location_text"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:hint="@string/location_hint"
        	android:inputType="textCapWords" />
    
    	<Button android:id="@+id/location_button"
    		style="?android:borderlessButtonStyle"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/pinpoint"
        	android:drawableRight="@drawable/ic_location_place"
        	android:drawableEnd="@drawable/ic_location_place" />    		

    	<TextView
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="30dp"
        	android:text="@string/time"
        	style="?android:listSeparatorTextViewStyle" />
    
    	<CheckBox android:id="@+id/fixed_time_check"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:text="@string/fixed_time" />
    
    	<LinearLayout android:id="@+id/time_layout"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        
        	<Button android:id="@+id/from_button"
        		style="?android:borderlessButtonStyle"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:layout_marginRight="10dp"
            	android:layout_marginEnd="10dp"
            	android:text="@string/from"
            	android:enabled="false" />
        
        	<TextView android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/divider"
            	android:textSize="18sp" />
        
        	<Button android:id="@+id/to_button"
        		style="?android:borderlessButtonStyle"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:layout_marginLeft="10dp"
            	android:layout_marginStart="10dp"
            	android:text="@string/to"
            	android:enabled="false" />
        
    	</LinearLayout>
        
    </LinearLayout>
        
</ScrollView>
